# ATM-Bench

./: .gitignore  README.md  README_zh.md  pyproject.toml  requirements.txt  setup.py
agent_systems/: README.md  RUNNER_GUIDE.md  collect_results.py  collect_usage.py  config.py  extract_answer.py  extract_usage.py  memory_variants.py  prepare_sandbox.py  runner_setup_public.md  runner_versions.md  runtime_artifacts.py
agent_systems/openclaw/: README.md  benchmark_quickstart.md  isolation_setup.md
agent_systems/prompts/: qa_schema.json  system_prompt.txt  system_prompt_descriptive.txt  system_prompt_raw.txt
agent_systems/scripts/: common.sh
agent_systems/scripts/claude_code/: run_claude_code.sh  run_claude_code_opus47-xhigh.sh
agent_systems/scripts/codex/: run_codex.sh  run_codex_gpt55_m.sh
agent_systems/scripts/openclaw/: package_openclaw_bundle.sh  run_openclaw.sh  run_openclaw_bench_user.sh  smoke_test_openclaw.sh
agent_systems/scripts/opencode/: opencode_models.sh  run_opencode.sh  run_opencode_openai_compatible.sh
agent_systems/scripts/pi/: run_pi.sh  run_pi_openai_compatible.sh
docs/: README.md  baseline.md  data.md  metrics.md  niah.md  repo_structure.md  reproducibility.md
memqa/: global_config.py
memqa/mem_processor/email/: __init__.py  batch_processor.py  config.py  email_processor.py  readme.md  utils.py
memqa/mem_processor/image/: __init__.py  batch_processor.py  config.py  (+2 more)
memqa/retrieve/: __init__.py  rerankers.py  retrievers.py  utils.py
memqa/utils/: copy_gps_info.py
scripts/: download_data.sh
scripts/QA_Agent/: common_eval.sh
(+107 files in other folders)
