[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atmbench"
version = "0.1.0"
description = "ATMBench: Long-term personalized referential memory QA benchmark and baselines"
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "Howard Mei"}
]
requires-python = ">=3.8"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]
exclude = [
  "data*",
  "output*",
  "outputs*",
  "logs*",
  "checkpoints*",
  "runs*",
  "wandb*",
  ".git*",
]

[tool.setuptools.package-dir]
"" = "."
